--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [0.12.x, 4.x, 6.x, 8.x, 10.x, 12.x]
+        node-version: [4.x, 6.x, 8.x, 10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v2
