--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,5 @@
-test/
+.github
+test
 
 # Created by https://www.gitignore.io/api/node,macos
 # Edit at https://www.gitignore.io/?templates=node,macos
